Styling to grid size

--- a/visual/css/style.css
+++ b/visual/css/style.css
@@ -61,6 +61,12 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: underline;
 }
 
+#GridSize {
+    top: 110px;
+    left: 20px;
+    width: 250px;
+}
+
 .option_header {
     font-size: 80%;
     margin-left: 20px;
